# Brace-Tracker

./: AGENTS.md  MVP_PLAN.md  Makefile  README.md  brace_tracker.toml  pyproject.toml
brace_tracker/: __init__.py  cli.py  config.py  io.py  metrics.py
brace_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bt-bracedata/: CB48F0F5_CB48F0F5_log.csv
tests/: test_cli.py  test_config.py  test_io.py  test_metrics.py
